--- a/directbak.yaml
+++ b/directbak.yaml
@@ -906,7 +906,6 @@ payload:
   - '+.115cdn.net'
   - '+.115img.com'
   - '+.115jk.com'
-  - '+.115z.com'
   - '+.1163.com'
   - '+.1166.com'
   - '+.11684.com'
@@ -1284,6 +1283,7 @@ payload:
   - '+.166.com'
   - '+.166.net'
   - '+.166161.com'
+  - '+.16640.com'
   - '+.1666.com'
   - '+.1668.net'
   - '+.1669la.com'
@@ -2608,6 +2608,7 @@ payload:
   - '+.3387.com'
   - '+.3389dh.com'
   - '+.3393.com'
+  - '+.33aml.com'
   - '+.33app.net'
   - '+.33bus.com'
   - '+.33hei.com'
@@ -7517,7 +7518,6 @@ payload:
   - '+.ahrunzi.com'
   - '+.ahs.pub'
   - '+.ahscl.com'
-  - '+.ahshuhua.net'
   - '+.ahsjxjy.com'
   - '+.ahsyj.com'
   - '+.ahsylsy.com'
@@ -10434,6 +10434,7 @@ payload:
   - '+.bidewu.com'
   - '+.bidianer.com'
   - '+.bidingxing.com'
+  - '+.bidizhaobiao.com'
   - '+.bidns.net'
   - '+.biduo.cc'
   - '+.biduobao.com'
@@ -11778,7 +11779,6 @@ payload:
   - '+.byfunds.com'
   - '+.byfzxy.com'
   - '+.bygamesdk.com'
-  - '+.bygjhb.com'
   - '+.bygw.net'
   - '+.byhard.com'
   - '+.byhlds.com'
@@ -20017,6 +20017,7 @@ payload:
   - '+.ejudata.com'
   - '+.ejujiu.com'
   - '+.ejunshi.com'
+  - '+.ejustcn.com'
   - '+.ek6.com'
   - '+.ekaidian.com'
   - '+.ekan001.com'
@@ -20212,7 +20213,6 @@ payload:
   - '+.enshijob.com'
   - '+.enstylement.com'
   - '+.ent120.com'
-  - '+.entboost.com'
   - '+.enterdesk.com'
   - '+.enunix.com'
   - '+.envisioncn.com'
@@ -23426,7 +23426,6 @@ payload:
   - '+.godns.site'
   - '+.godo.pub'
   - '+.godoor.com'
-  - '+.godotdotdot.com'
   - '+.godrry.com'
   - '+.godruoyi.com'
   - '+.godsheepteam.com'
@@ -24923,7 +24922,6 @@ payload:
   - '+.hansrobot.com'
   - '+.hansuku.com'
   - '+.hantang59.com'
-  - '+.hantangrx.com'
   - '+.hantangxintong.com'
   - '+.hanterry.com'
   - '+.hantinghotels.com'
@@ -25404,7 +25402,6 @@ payload:
   - '+.hbrebond.com'
   - '+.hbrfxh.com'
   - '+.hbruicai.com'
-  - '+.hbruitaigdzz.com'
   - '+.hbrunlin.com'
   - '+.hbryzx.net'
   - '+.hbrzkj.com'
@@ -28860,6 +28857,7 @@ payload:
   - '+.iiaq.net'
   - '+.iibechina.com'
   - '+.iibq.com'
+  - '+.iicha.com'
   - '+.iicp.net'
   - '+.iidns.com'
   - '+.iiedns.xyz'
@@ -30761,6 +30759,7 @@ payload:
   - '+.jiantufuwu.com'
   - '+.jiantuku.com'
   - '+.jianwang360.com'
+  - '+.jianweidata.com'
   - '+.jianweitv.com'
   - '+.jianwenapp.com'
   - '+.jianxin-tech.com'
@@ -30774,7 +30773,6 @@ payload:
   - '+.jianzhan580.com'
   - '+.jianzhanbao.net'
   - '+.jianzhangongsi.com'
-  - '+.jianzhi.net'
   - '+.jianzhi8.com'
   - '+.jianzhiba.net'
   - '+.jianzhikeji.com'
@@ -31073,6 +31071,7 @@ payload:
   - '+.jingfanshidai.com'
   - '+.jingfentui.com'
   - '+.jingguan.ai'
+  - '+.jinggui.com'
   - '+.jinghaishop.com'
   - '+.jinghangapps.com'
   - '+.jinghooo.com'
@@ -38215,6 +38214,7 @@ payload:
   - '+.mmzh.com'
   - '+.mn-soft.com'
   - '+.mnancheng.com'
+  - '+.mnbkw.com'
   - '+.mnbvtgv.com'
   - '+.mng0303.com'
   - '+.mnihyc.com'
@@ -38750,7 +38750,6 @@ payload:
   - '+.muchong.com'
   - '+.muchrank.com'
   - '+.mudgj.com'
-  - '+.mudiao360.com'
   - '+.mudongguang.com'
   - '+.mudoudou.net'
   - '+.mudu.com'
@@ -39865,7 +39864,6 @@ payload:
   - '+.nizhanw.com'
   - '+.nizi88.com'
   - '+.nizkeyboard.com'
-  - '+.nizuixing.com'
   - '+.nj-bl.com'
   - '+.nj-marathon.org'
   - '+.nj-qiyiguo.net'
@@ -47475,6 +47473,7 @@ payload:
   - '+.sjzcsw.com'
   - '+.sjzhu.com'
   - '+.sjzhushou.com'
+  - '+.sjzjkqgs.com'
   - '+.sjzkz.com'
   - '+.sjzlg.com'
   - '+.sjzlgz.com'
@@ -48522,6 +48521,7 @@ payload:
   - '+.strong-study.com'
   - '+.strongled.com'
   - '+.stswjx.com'
+  - '+.sttcq.com'
   - '+.stubbornhuang.com'
   - '+.studa.net'
   - '+.studencis.com'
@@ -50890,7 +50890,6 @@ payload:
   - '+.tongliangrc.com'
   - '+.tongliaowang.com'
   - '+.tonglu-tour.com'
-  - '+.tongmengguo.com'
   - '+.tongshanbank.com'
   - '+.tongshilu.com'
   - '+.tongshuai.com'
@@ -52450,7 +52449,6 @@ payload:
   - '+.urselect.com'
   - '+.urtrust.com'
   - '+.us-ex.com'
-  - '+.us7.com'
   - '+.usa-gti.com'
   - '+.usa-idc.com'
   - '+.usaas.net'
@@ -54214,7 +54212,6 @@ payload:
   - '+.weiyituku.com'
   - '+.weiyoubot.com'
   - '+.weiyours.com'
-  - '+.weiyui.com'
   - '+.weiyun.com'
   - '+.weiyun001.com'
   - '+.weiyunchong.com'
@@ -55672,6 +55669,7 @@ payload:
   - '+.wujinimg.com'
   - '+.wujinkk.com'
   - '+.wujinpp.com'
+  - '+.wujiok.com'
   - '+.wujixiaoshuo.com'
   - '+.wukong.com'
   - '+.wukong.la'
@@ -56426,7 +56424,6 @@ payload:
   - '+.xhboke.com'
   - '+.xhby.net'
   - '+.xhbycm.net'
-  - '+.xhcjtv.com'
   - '+.xhclub.net'
   - '+.xhcpas.com'
   - '+.xhd.org'
@@ -57119,6 +57116,7 @@ payload:
   - '+.xinfenlei.com'
   - '+.xinfu888.com'
   - '+.xinfushe.com'
+  - '+.xinfuye.com'
   - '+.xing73.com'
   - '+.xingames.com'
   - '+.xingbangip.com'
@@ -58094,7 +58092,6 @@ payload:
   - '+.xueshandai.com'
   - '+.xueshanlinghu.com'
   - '+.xueshen.net'
-  - '+.xueshiboke.com'
   - '+.xueshiyun.com'
   - '+.xueshu.com'
   - '+.xueshu5.com'
@@ -60684,7 +60681,6 @@ payload:
   - '+.yuexing.com'
   - '+.yuexingfurniture.com'
   - '+.yuexinli.com'
-  - '+.yuexinyouxi.com'
   - '+.yuexirc.com'
   - '+.yuexiu.com'
   - '+.yuexunedu.com'
@@ -62334,12 +62330,12 @@ payload:
   - '+.zhiniu8.com'
   - '+.zhipan.net'
   - '+.zhipeix.com'
+  - '+.zhipianbang.com'
   - '+.zhipiaoduixian8.com'
   - '+.zhipin.com'
   - '+.zhipingke.com'
   - '+.zhiqiang.org'
   - '+.zhiqiapp.com'
-  - '+.zhiquansheng.com'
   - '+.zhiquanxia.com'
   - '+.zhiquapp.com'
   - '+.zhiquyuan.com'
@@ -63160,6 +63156,7 @@ payload:
   - '+.zjzdgj.com'
   - '+.zjzfcj.com'
   - '+.zjzg.com'
+  - '+.zjzhengding.com'
   - '+.zjzhitan.com'
   - '+.zjzj.org'
   - '+.zjzjhotel.com'
