--- a/directbak.yaml
+++ b/directbak.yaml
@@ -643,6 +643,7 @@ payload:
   - '+.10000tc.com'
   - '+.10000yao.com'
   - '+.10001wan.com'
+  - '+.100024.xyz'
   - '+.1000360.com'
   - '+.10006.info'
   - '+.1000ci.net'
@@ -1758,6 +1759,7 @@ payload:
   - '+.1kuang.com'
   - '+.1kx.me'
   - '+.1kxun.com'
+  - '+.1kyx.com'
   - '+.1lan.tv'
   - '+.1lewen.com'
   - '+.1look.tv'
@@ -3178,6 +3180,7 @@ payload:
   - '+.3t769up6.com'
   - '+.3tilabs.com'
   - '+.3u.com'
+  - '+.3unshine.com'
   - '+.3uol.com'
   - '+.3us.com'
   - '+.3uww.cc'
@@ -12137,6 +12140,7 @@ payload:
   - '+.canaan-creative.com'
   - '+.canasy.com'
   - '+.cancda.net'
+  - '+.cancer361.com'
   - '+.candou.com'
   - '+.candylab.net'
   - '+.candypay.com'
@@ -16763,6 +16767,7 @@ payload:
   - '+.d03jd.com'
   - '+.d1222.com'
   - '+.d17.cc'
+  - '+.d1999.com'
   - '+.d1cm.com'
   - '+.d1com.com'
   - '+.d1dengju.com'
@@ -18006,6 +18011,7 @@ payload:
   - '+.digitalwuhan.com'
   - '+.digitalwuhan.net'
   - '+.digitlink.net'
+  - '+.digitocero.com'
   - '+.digitser.net'
   - '+.digiwin.com'
   - '+.digiwork.com'
@@ -18514,6 +18520,7 @@ payload:
   - '+.dongcaibaoxian.com'
   - '+.dongchaba.com'
   - '+.dongchedi.com'
+  - '+.dongcheng1.com'
   - '+.dongcheng120.com'
   - '+.dongchenghotels.com'
   - '+.dongdao.net'
@@ -18768,6 +18775,7 @@ payload:
   - '+.dper.com'
   - '+.dpevmh.com'
   - '+.dpfile.com'
+  - '+.dplayerjsvideo.com'
   - '+.dplayersvideostatic.com'
   - '+.dplor.com'
   - '+.dplord.com'
@@ -23458,6 +23466,7 @@ payload:
   - '+.gohugo.org'
   - '+.going-link.com'
   - '+.gojiaju.com'
+  - '+.gokaigai.com'
   - '+.goke.com'
   - '+.gokols.com'
   - '+.gokuai.com'
@@ -33146,6 +33155,7 @@ payload:
   - '+.kiku.vip'
   - '+.kililife.com'
   - '+.killdb.com'
+  - '+.kiloai.com'
   - '+.kimiss.com'
   - '+.kimiss.net'
   - '+.kimiter.com'
@@ -35740,6 +35750,7 @@ payload:
   - '+.lnrsks.com'
   - '+.lnsent.com'
   - '+.lnsgczb.com'
+  - '+.lnsyrjwz.com'
   - '+.lntenghui.com'
   - '+.lntvu.com'
   - '+.lntycp.com'
@@ -35958,7 +35969,6 @@ payload:
   - '+.looyush.com'
   - '+.lopetech.net'
   - '+.lopkino.com'
-  - '+.lopopoo.com'
   - '+.lopss.com'
   - '+.lorefree.com'
   - '+.losking.com'
@@ -36462,6 +36472,7 @@ payload:
   - '+.lxybaike.com'
   - '+.lxyes.com'
   - '+.lxyl539.com'
+  - '+.lxyllawfirm.com'
   - '+.ly-sky.com'
   - '+.ly.com'
   - '+.ly200-cdn.com'
@@ -40487,6 +40498,7 @@ payload:
   - '+.okada-china.com'
   - '+.okaoyan.com'
   - '+.okayapi.com'
+  - '+.okaybio.com'
   - '+.okbao.com'
   - '+.okbase.net'
   - '+.okbiao.com'
@@ -41138,6 +41150,7 @@ payload:
   - '+.palanceli.com'
   - '+.palm-h.com'
   - '+.palmestore.com'
+  - '+.palmfungames.com'
   - '+.palmjoys.com'
   - '+.palmtrends.com'
   - '+.palmyou.com'
@@ -41961,6 +41974,7 @@ payload:
   - '+.plcsq.com'
   - '+.plesk-cn.com'
   - '+.plexjiasuqi.com'
+  - '+.plexpt.com'
   - '+.plob.org'
   - '+.plotcup.com'
   - '+.plqdf.com'
@@ -49780,7 +49794,6 @@ payload:
   - '+.tapdata.net'
   - '+.tapdb.com'
   - '+.tapdb.net'
-  - '+.tapechat.net'
   - '+.tapenjoy.com'
   - '+.tapimg.com'
   - '+.tapotiexie.com'
@@ -50838,7 +50851,6 @@ payload:
   - '+.tokensky.net'
   - '+.tokenworld.pro'
   - '+.tokimekiclub.org'
-  - '+.toktok-mall.com'
   - '+.tol24.com'
   - '+.tom.cat'
   - '+.tom.com'
@@ -53488,6 +53500,7 @@ payload:
   - '+.wandouip.com'
   - '+.wandoujia.com'
   - '+.waneziyuan.com'
+  - '+.wanfangche.com'
   - '+.wanfangdata.com'
   - '+.wanfangqikan.com'
   - '+.wanfangs.com'
@@ -53969,6 +53982,7 @@ payload:
   - '+.wefitos.com'
   - '+.wefunol.com'
   - '+.wegame.com'
+  - '+.wegameapi.com'
   - '+.wegamex.com.hk'
   - '+.wegene.com'
   - '+.wegowan.com'
@@ -56543,6 +56557,7 @@ payload:
   - '+.xiangrikui.co'
   - '+.xiangrikui.com'
   - '+.xiangrikuijianzhan.com'
+  - '+.xiangruizulin.com'
   - '+.xiangshang360.com'
   - '+.xiangshangban.com'
   - '+.xiangshanpark.com'
@@ -56844,6 +56859,7 @@ payload:
   - '+.xiaoten.com'
   - '+.xiaotengyouxi.com'
   - '+.xiaotiancai.com'
+  - '+.xiaotud.com'
   - '+.xiaotut.com'
   - '+.xiaotuzhan.com'
   - '+.xiaou2014.com'
@@ -59707,6 +59723,7 @@ payload:
   - '+.yjk.im'
   - '+.yjldp.com'
   - '+.yjlin4.com'
+  - '+.yjlink.cc'
   - '+.yjnbn.com'
   - '+.yjopen.com'
   - '+.yjpal.com'
@@ -60065,6 +60082,7 @@ payload:
   - '+.youedata.com'
   - '+.youeryun.com'
   - '+.youez.com'
+  - '+.youfangou.com'
   - '+.youfangzx.com'
   - '+.youfen666.com'
   - '+.youfh.com'
@@ -60289,6 +60307,7 @@ payload:
   - '+.youyeetoo.com'
   - '+.youyegame.com'
   - '+.youyi-game.com'
+  - '+.youyigame.com'
   - '+.youyilm.com'
   - '+.youyiqi.com'
   - '+.youyiqiaogou.com'
@@ -62142,6 +62161,7 @@ payload:
   - '+.zhengyifeng.com'
   - '+.zhengyinyong.com'
   - '+.zhengyounet.com'
+  - '+.zhengyouyoule.com'
   - '+.zhengzai.tv'
   - '+.zhengzhen25.xyz'
   - '+.zhengzhen26.xyz'
