--- a/directbak.yaml
+++ b/directbak.yaml
@@ -318,6 +318,7 @@ payload:
   - '+.0523zp.com'
   - '+.0523zz.com'
   - '+.05273.com'
+  - '+.0527ys.com'
   - '+.0527zz.com'
   - '+.052yx.com'
   - '+.0531.com'
@@ -1074,6 +1075,7 @@ payload:
   - '+.128456.com'
   - '+.1288.tv'
   - '+.128qd.com'
+  - '+.128sy.com'
   - '+.128uu.com'
   - '+.12988.net'
   - '+.12edu.com'
@@ -1153,6 +1155,7 @@ payload:
   - '+.139135.com'
   - '+.1392189.com'
   - '+.13937180868.com'
+  - '+.139592.com'
   - '+.13973.com'
   - '+.139cm.com'
   - '+.139down.com'
@@ -1232,7 +1235,6 @@ payload:
   - '+.15w.com'
   - '+.15wz.com'
   - '+.15xdd.com'
-  - '+.15yan.com'
   - '+.15yc.com'
   - '+.15yl.com'
   - '+.160.com'
@@ -2386,7 +2388,6 @@ payload:
   - '+.2yuanyy.com'
   - '+.2yun.com'
   - '+.2yup.com'
-  - '+.2zfzly.com'
   - '+.2zhk.com'
   - '+.2zimu.com'
   - '+.2zzzzzz.com'
@@ -5168,8 +5169,8 @@ payload:
   - '+.678ie.com'
   - '+.678pdf.com'
   - '+.678py.com'
+  - '+.67gu.com'
   - '+.67joy.com'
-  - '+.67lm.com'
   - '+.67mo.com'
   - '+.67wanwan.com'
   - '+.67yes.com'
@@ -5268,6 +5269,7 @@ payload:
   - '+.6kw.com'
   - '+.6laohu.com'
   - '+.6lk.net'
+  - '+.6ll.com'
   - '+.6m5m.com'
   - '+.6mao.com'
   - '+.6mh7.com'
@@ -5290,6 +5292,7 @@ payload:
   - '+.6thhosp.com'
   - '+.6tiantian.com'
   - '+.6tie.com'
+  - '+.6tofsu.com'
   - '+.6v.com'
   - '+.6v6.work'
   - '+.6vps.net'
@@ -5421,7 +5424,6 @@ payload:
   - '+.73card.com'
   - '+.73zw.com'
   - '+.74.com'
-  - '+.7412557.com'
   - '+.7428.net'
   - '+.744zy.com'
   - '+.7474.com'
@@ -6189,7 +6191,6 @@ payload:
   - '+.90432.net'
   - '+.90576.com'
   - '+.906you.com'
-  - '+.90880.com'
   - '+.90907.com'
   - '+.90bola.cc'
   - '+.90bola.me'
@@ -6438,6 +6439,7 @@ payload:
   - '+.927jx.com'
   - '+.928vbi.com'
   - '+.92913.com'
+  - '+.929825.com'
   - '+.92987.com'
   - '+.9299.net'
   - '+.92aliyun.com'
@@ -10182,6 +10184,7 @@ payload:
   - '+.benber-tech.com'
   - '+.benber.com'
   - '+.benbun.com'
+  - '+.bendi5.com'
   - '+.bendibao.com'
   - '+.bendiw.cc'
   - '+.benellimotor.com'
@@ -10207,6 +10210,7 @@ payload:
   - '+.bensedl.com'
   - '+.benseshijue.com'
   - '+.benshouji.com'
+  - '+.bensiea.com'
   - '+.benyh.com'
   - '+.benyouhui.com'
   - '+.benzhb.com'
@@ -10655,7 +10659,6 @@ payload:
   - '+.biqukun.la'
   - '+.biqulou.net'
   - '+.biquluo.com'
-  - '+.biqumo.com'
   - '+.biqupai.com'
   - '+.biququ.com'
   - '+.biqusa.com'
@@ -11448,7 +11451,6 @@ payload:
   - '+.bqq8.com'
   - '+.bqrdh.com'
   - '+.bqteng.com'
-  - '+.bqzhh.com'
   - '+.bragood.com'
   - '+.braincf.com'
   - '+.brand4x4.com'
@@ -11832,6 +11834,7 @@ payload:
   - '+.byteoc.com'
   - '+.byteorg.com'
   - '+.byteorge.com'
+  - '+.byteox.com'
   - '+.bytescm.com'
   - '+.bytesfield.com'
   - '+.bytesmanager.com'
@@ -14879,6 +14882,7 @@ payload:
   - '+.cmbchina.com'
   - '+.cmbchina.net'
   - '+.cmbimg.com'
+  - '+.cmbs-soft.com'
   - '+.cmbwinglungbank.com'
   - '+.cmbyc.com'
   - '+.cmcc-ecs.com'
@@ -15984,7 +15988,6 @@ payload:
   - '+.cqcsic.com'
   - '+.cqcsrc.com'
   - '+.cqcy.com'
-  - '+.cqcyls.com'
   - '+.cqdadi.com'
   - '+.cqdai.com'
   - '+.cqdailynews.com'
@@ -18934,7 +18937,6 @@ payload:
   - '+.du8.com'
   - '+.dualaid.com'
   - '+.duan.red'
-  - '+.duanjn.com'
   - '+.duanlonggang.com'
   - '+.duanmale.com'
   - '+.duanmeiwen.com'
@@ -20020,6 +20022,7 @@ payload:
   - '+.ekesoo.com'
   - '+.eketong.com'
   - '+.ekuaibao.com'
+  - '+.ekwangs.com'
   - '+.ekweixin.com'
   - '+.elabinfo.com'
   - '+.elane.com'
@@ -20862,6 +20865,7 @@ payload:
   - '+.fang.com'
   - '+.fang33.com'
   - '+.fang668.com'
+  - '+.fang91.com'
   - '+.fang99.cc'
   - '+.fang99.com'
   - '+.fangbaoqiang.net'
@@ -21050,6 +21054,7 @@ payload:
   - '+.fastbestbetergoodcdn.com'
   - '+.fastcdn.com'
   - '+.fastdo.cc'
+  - '+.fastgit.org'
   - '+.fastgz.com'
   - '+.fastidea.cc'
   - '+.fastliii.com'
@@ -21357,6 +21362,7 @@ payload:
   - '+.fengyitong.name'
   - '+.fengyu.moe'
   - '+.fengyuansufen.com'
+  - '+.fengyuncad.com'
   - '+.fengyuncx.com'
   - '+.fengyunpdf.com'
   - '+.fengyushan.com'
@@ -23306,7 +23312,6 @@ payload:
   - '+.glorze.com'
   - '+.glosku.com'
   - '+.glowapp.fun'
-  - '+.glp.com'
   - '+.glqh.com'
   - '+.glshimg.com'
   - '+.gltjk.com'
@@ -23332,7 +23337,6 @@ payload:
   - '+.gmecity.com'
   - '+.gmed.cc'
   - '+.gmem.cc'
-  - '+.gmem.site'
   - '+.gmfintl.com'
   - '+.gmgc.info'
   - '+.gmgdc.com'
@@ -26890,6 +26894,7 @@ payload:
   - '+.hroot.co'
   - '+.hroot.com'
   - '+.hrpackage.com'
+  - '+.hrrsj.com'
   - '+.hrrukou.com'
   - '+.hrs100.com'
   - '+.hrsalon.org'
@@ -28162,7 +28167,6 @@ payload:
   - '+.iaikx.com'
   - '+.ialicdn.com'
   - '+.ialloc.com'
-  - '+.ialloc.org'
   - '+.iambanban.com'
   - '+.iambocai.com'
   - '+.iameduwork.com'
@@ -28697,7 +28701,6 @@ payload:
   - '+.ifma-china.org'
   - '+.ifmicro.com'
   - '+.ifmtech.com'
-  - '+.ifmx.cc'
   - '+.ifnews.com'
   - '+.ifonelab.net'
   - '+.iforce-media.com'
@@ -29154,7 +29157,6 @@ payload:
   - '+.imomoe.com'
   - '+.imomoe.in'
   - '+.imomoe.io'
-  - '+.imomoe.jp'
   - '+.imooc.com'
   - '+.imoocc.com'
   - '+.imoonfm.com'
@@ -29633,7 +29635,6 @@ payload:
   - '+.is-programmer.com'
   - '+.is36.com'
   - '+.isamanhua.com'
-  - '+.isaonian.com'
   - '+.isay365.com'
   - '+.isbdai.org'
   - '+.iscrv.com'
@@ -30111,7 +30112,6 @@ payload:
   - '+.iyong.com'
   - '+.iyongpdf.com'
   - '+.iyooread.com'
-  - '+.iyoowi.com'
   - '+.iyoucai.com'
   - '+.iyoudui.com'
   - '+.iyouhun.com'
@@ -30569,6 +30569,7 @@ payload:
   - '+.ji7.com'
   - '+.jia-he-jia.com'
   - '+.jia.com'
+  - '+.jia12.com'
   - '+.jia360.com'
   - '+.jia400.com'
   - '+.jiaads.com'
@@ -30770,6 +30771,7 @@ payload:
   - '+.jiaodong.net'
   - '+.jiaofei123.com'
   - '+.jiaohuilian.com'
+  - '+.jiaohusheji.net'
   - '+.jiaoliuqu.com'
   - '+.jiaomai.com'
   - '+.jiaoman.cc'
@@ -31328,7 +31330,6 @@ payload:
   - '+.jiugang.com'
   - '+.jiugangbid.com'
   - '+.jiuhuang.com'
-  - '+.jiuhuar.com'
   - '+.jiuhuashan.cc'
   - '+.jiuishizanjin.com'
   - '+.jiujiange.com'
@@ -32122,7 +32123,6 @@ payload:
   - '+.jujiangkk.com'
   - '+.jujiaobaby.com'
   - '+.jujiaonet.com'
-  - '+.jujiaonet1.com'
   - '+.jujias.com'
   - '+.jujienet.com'
   - '+.jujin8.com'
@@ -32484,7 +32484,6 @@ payload:
   - '+.jz100.com'
   - '+.jz177.com'
   - '+.jz182.com'
-  - '+.jz2005.com'
   - '+.jz5u.com'
   - '+.jz6.com'
   - '+.jz6868.com'
@@ -34210,6 +34209,7 @@ payload:
   - '+.lanmaokeji.com'
   - '+.lanmaos.com'
   - '+.lanmit.com'
+  - '+.lanmon.net'
   - '+.lanou3g.com'
   - '+.lanpanpan.com'
   - '+.lanqb.com'
@@ -34625,7 +34625,6 @@ payload:
   - '+.leiouxiong.com'
   - '+.leipengkai.com'
   - '+.leiphone.com'
-  - '+.leirenw.com'
   - '+.leirsw.com'
   - '+.leishen-lidar.com'
   - '+.leishouwin.cc'
@@ -34666,7 +34665,6 @@ payload:
   - '+.leleren.com'
   - '+.leletv.com'
   - '+.leletv.net'
-  - '+.lelevod.com'
   - '+.lelewl.com'
   - '+.lemai.com'
   - '+.lemaker.com'
@@ -35153,6 +35151,7 @@ payload:
   - '+.lily-collection.com'
   - '+.lilysamericandiner.com'
   - '+.lilysgame.com'
+  - '+.limaoqiu.com'
   - '+.limax.com'
   - '+.limboy.com'
   - '+.limei.com'
@@ -35173,6 +35172,7 @@ payload:
   - '+.linecg.net'
   - '+.linekong.com'
   - '+.linelayout.com'
+  - '+.linemore.com'
   - '+.linewell.com'
   - '+.linewow.com'
   - '+.linezing.com'
@@ -35530,6 +35530,7 @@ payload:
   - '+.livecourse.com'
   - '+.liveinau.com'
   - '+.liveincy.com'
+  - '+.livejournal.com'
   - '+.liveme.com'
   - '+.livemediav.com'
   - '+.livemook.com'
@@ -36878,6 +36879,7 @@ payload:
   - '+.mangzitian.com'
   - '+.manhua1.com'
   - '+.manhua101.com'
+  - '+.manhua166.com'
   - '+.manhua188.com'
   - '+.manhua365.com'
   - '+.manhua456.com'
@@ -37346,6 +37348,7 @@ payload:
   - '+.meilecui.com'
   - '+.meili-inc.com'
   - '+.meilibaobao.com'
+  - '+.meilidongnanya.com'
   - '+.meilijia.com'
   - '+.meiling.com'
   - '+.meiling360.com'
@@ -40450,6 +40453,7 @@ payload:
   - '+.oilmooc.com'
   - '+.oinva5yl.com'
   - '+.oiuwe.com'
+  - '+.oje26fnevfdg.com'
   - '+.ok-meeting.com'
   - '+.ok06.com'
   - '+.ok1616.com'
@@ -40745,7 +40749,6 @@ payload:
   - '+.opsapp.com'
   - '+.opskb.com'
   - '+.opskumu.com'
-  - '+.opslinux.com'
   - '+.opsnote.com'
   - '+.opstool.com'
   - '+.optaim.com'
@@ -41631,6 +41634,7 @@ payload:
   - '+.phpyun.com'
   - '+.phys.net'
   - '+.physicalchina.vip'
+  - '+.physoe.com'
   - '+.phyt88.com'
   - '+.phyy.com'
   - '+.pi7.com'
@@ -43525,7 +43529,6 @@ payload:
   - '+.qqkrmotors.com'
   - '+.qqku.com'
   - '+.qqkuyou.com'
-  - '+.qqkw.net'
   - '+.qqleju.com'
   - '+.qqlin.net'
   - '+.qqma.com'
@@ -44025,7 +44028,6 @@ payload:
   - '+.qykh2009.com'
   - '+.qykodo.com'
   - '+.qyle1.com'
-  - '+.qyled.xyz'
   - '+.qymgc.com'
   - '+.qyous.com'
   - '+.qypiayer.xyz'
@@ -44460,7 +44462,6 @@ payload:
   - '+.retey.net'
   - '+.retiehe.com'
   - '+.retouchpics.com'
-  - '+.retow.com'
   - '+.return.net'
   - '+.returnc.com'
   - '+.reverselove.com'
@@ -47770,7 +47771,6 @@ payload:
   - '+.snxw.com'
   - '+.snyu.com'
   - '+.snzfj.net'
-  - '+.snzgy.com'
   - '+.snzhz.com'
   - '+.so-love.com'
   - '+.so-naver.com'
@@ -48293,7 +48293,6 @@ payload:
   - '+.ssjjss.com'
   - '+.ssjjtt.com'
   - '+.ssjlicai.com'
-  - '+.ssjzw.com'
   - '+.ssky123.com'
   - '+.sslaaa.com'
   - '+.sslceshi.com'
@@ -48966,7 +48965,6 @@ payload:
   - '+.sxjh88.com'
   - '+.sxjhzsgc.com'
   - '+.sxjzxww.com'
-  - '+.sxkid.com'
   - '+.sxkzxt.com'
   - '+.sxlcdn.com'
   - '+.sxldns.com'
@@ -49256,11 +49254,11 @@ payload:
   - '+.szjlwul.com'
   - '+.szjunfei.com'
   - '+.szjuquan.com'
+  - '+.szjys1888.com'
   - '+.szjytx.com'
   - '+.szkegao.net'
   - '+.szkingdom.com'
   - '+.szkoa.com'
-  - '+.szlan.com'
   - '+.szlande.com'
   - '+.szlangwei.com'
   - '+.szlc9.com'
@@ -50049,7 +50047,6 @@ payload:
   - '+.tengxunmail.com'
   - '+.tengxunqiye.com'
   - '+.tengxunqiyeyou.com'
-  - '+.tengxunyu.com'
   - '+.tengy.com'
   - '+.tengyuejz.com'
   - '+.tengzhihh.com'
@@ -50704,6 +50701,7 @@ payload:
   - '+.tlkzs.com'
   - '+.tlqwine.com'
   - '+.tlrcbk.com'
+  - '+.tlryjg.com'
   - '+.tlsj-hd.com'
   - '+.tlstwy.com'
   - '+.tlte.com'
@@ -51304,6 +51302,7 @@ payload:
   - '+.tsxcx.xyz'
   - '+.tsybsmz.com'
   - '+.tsyqb.com'
+  - '+.tsyvps.com'
   - '+.tsyzm.com'
   - '+.tsz.com'
   - '+.tszckj.com'
@@ -52231,7 +52230,6 @@ payload:
   - '+.unclenoway.net'
   - '+.unclenowayapi.com'
   - '+.unclicks.com'
-  - '+.undefined.ltd'
   - '+.underfill.cc'
   - '+.uneed.com'
   - '+.unfish.net'
@@ -53635,6 +53633,7 @@ payload:
   - '+.wanshahao.com'
   - '+.wanshanshuju.com'
   - '+.wanshifu.com'
+  - '+.wanshiruyi.net'
   - '+.wanshitong.com'
   - '+.wanshouyou.net'
   - '+.wanshuyun.com'
@@ -55081,6 +55080,7 @@ payload:
   - '+.wmpic.me'
   - '+.wmpvp.com'
   - '+.wmpyol.com'
+  - '+.wmqfey.com'
   - '+.wms100.com'
   - '+.wmsjyun.com'
   - '+.wmssedu.com'
@@ -55199,6 +55199,7 @@ payload:
   - '+.wolfcstech.com'
   - '+.wolfgo.com'
   - '+.wolfogre.com'
+  - '+.wolianw.com'
   - '+.wolife.com'
   - '+.wolighting.com'
   - '+.woliuda.com'
@@ -55484,6 +55485,7 @@ payload:
   - '+.wsisp.com'
   - '+.wsisp.net'
   - '+.wsjx.net'
+  - '+.wskam.com'
   - '+.wslcode.com'
   - '+.wsljf.xyz'
   - '+.wslmf.com'
@@ -55991,6 +55993,7 @@ payload:
   - '+.wzz180809.net'
   - '+.wzz1809.com'
   - '+.wzznft.com'
+  - '+.wzzp.com'
   - '+.wzzww.com'
   - '+.x-bows.com'
   - '+.x-cti.org'
@@ -58259,7 +58262,6 @@ payload:
   - '+.xxhyzd.com'
   - '+.xxingclub.com'
   - '+.xxjcy.com'
-  - '+.xxjr.com'
   - '+.xxjrjxc.com'
   - '+.xxjrqc.com'
   - '+.xxka.com'
@@ -58347,6 +58349,7 @@ payload:
   - '+.xyfw.org'
   - '+.xygmed.com'
   - '+.xyh001.com'
+  - '+.xyh2021.com'
   - '+.xyhc.com'
   - '+.xyhis.com'
   - '+.xyhlcd.com'
@@ -58625,6 +58628,7 @@ payload:
   - '+.yannv.com'
   - '+.yanoda.com'
   - '+.yanpk.com'
+  - '+.yanpwy.com'
   - '+.yanqiao.com'
   - '+.yanqingzhan.net'
   - '+.yansedaquan.com'
@@ -58711,6 +58715,7 @@ payload:
   - '+.yatiwang.com'
   - '+.yatsenglobal.com'
   - '+.yatsoft.com'
+  - '+.yaucxrt.com'
   - '+.yawancaiwu.com'
   - '+.yaxi.net'
   - '+.yaxige.com'
@@ -59062,7 +59067,6 @@ payload:
   - '+.yhdtns.com'
   - '+.yhees.com'
   - '+.yhetent.com'
-  - '+.yhfx.info'
   - '+.yhgfb-cn-static.com'
   - '+.yhgo.wang'
   - '+.yhgo8.com'
@@ -59292,6 +59296,7 @@ payload:
   - '+.yimengmusic.com'
   - '+.yimenonline.com'
   - '+.yimenyun.net'
+  - '+.yimian.xyz'
   - '+.yimianmian.com'
   - '+.yimiaozhongdemeng.com'
   - '+.yimidida.com'
@@ -59816,7 +59821,6 @@ payload:
   - '+.yn12396.com'
   - '+.yn58.com'
   - '+.ynairport.com'
-  - '+.ynaquatic-foods.com'
   - '+.ynb2dca.com'
   - '+.ynbit.com'
   - '+.ynbojie.com'
@@ -61075,7 +61079,6 @@ payload:
   - '+.ywtd.xyz'
   - '+.ywtrzm.com'
   - '+.ywtuchuang1.com'
-  - '+.ywtx.cc'
   - '+.ywxue.com'
   - '+.ywxzz.com'
   - '+.ywyanxing.com'
@@ -61159,6 +61162,7 @@ payload:
   - '+.yxt521.com'
   - '+.yxtapp.com'
   - '+.yxttzb.com'
+  - '+.yxtun.com'
   - '+.yxtvg.com'
   - '+.yxwoo.com'
   - '+.yxxgame.com'
@@ -61321,6 +61325,7 @@ payload:
   - '+.yzzsoft.com'
   - '+.yzzzn.com'
   - '+.z-bank.com'
+  - '+.z-dd.net'
   - '+.z-index.cc'
   - '+.z-inn.com'
   - '+.z-zhuji.com'
@@ -62159,10 +62164,8 @@ payload:
   - '+.zhgsw.com'
   - '+.zhguoguo.com'
   - '+.zhhainiao.com'
-  - '+.zhhbqg.com'
   - '+.zhhrm.com'
   - '+.zhhs-china.com'
-  - '+.zhhtxt.com'
   - '+.zhhuahui.com'
   - '+.zhhy-oa.com'
   - '+.zhi-bo.net'
@@ -62314,6 +62317,7 @@ payload:
   - '+.zhirui-inv.com'
   - '+.zhiruyi.com'
   - '+.zhisanzhao.com'
+  - '+.zhishangsoft.com'
   - '+.zhisheji.com'
   - '+.zhishi.life'
   - '+.zhishibo.com'
@@ -62496,7 +62500,6 @@ payload:
   - '+.zhongruitech.com'
   - '+.zhongshang114.com'
   - '+.zhongshanpark.com'
-  - '+.zhongshanyinyuetang.org'
   - '+.zhongshengdai.com'
   - '+.zhongshucan.com'
   - '+.zhongso.com'
@@ -62595,7 +62598,6 @@ payload:
   - '+.zhuangzhuang.net'
   - '+.zhuanhuanqi.com'
   - '+.zhuaniao.com'
-  - '+.zhuanile.com'
   - '+.zhuankeba.org'
   - '+.zhuanlichaxun.net'
   - '+.zhuanliqiao.com'
@@ -63616,6 +63618,7 @@ payload:
   - '+.zuimeiqidai.com'
   - '+.zuimeitianqi.com'
   - '+.zuimeix.com'
+  - '+.zuimh.com'
   - '+.zuiqiangyingyu.net'
   - '+.zuirede.com'
   - '+.zuishidai.com'
@@ -63902,7 +63905,6 @@ payload:
   - '+.zyzkb.net'
   - '+.zyzw.com'
   - '+.zyzxs.com'
-  - '+.zz-qq.com'
   - '+.zz-zigzag.com'
   - '+.zz21.com'
   - '+.zz314.com'
