--- a/directbak.yaml
+++ b/directbak.yaml
@@ -7,7 +7,6 @@ payload:
   - '+.00042.com'
   - '+.00058.com'
   - '+.0006266.com'
-  - '+.0007.net'
   - '+.000714.xyz'
   - '+.000dn.com'
   - '+.000e.com'
@@ -263,7 +262,6 @@ payload:
   - '+.0371wang.com'
   - '+.037201.com'
   - '+.037398.com'
-  - '+.0375art.com'
   - '+.0376news.com'
   - '+.0378zz.com'
   - '+.0379home.com'
@@ -1101,7 +1099,6 @@ payload:
   - '+.1314zf.com'
   - '+.1317w.com'
   - '+.131cc.com'
-  - '+.131vip1.com'
   - '+.131w.tv'
   - '+.1322.com'
   - '+.132lawyer.com'
@@ -1129,7 +1126,6 @@ payload:
   - '+.135edu.com'
   - '+.135fa.com'
   - '+.135plat.com'
-  - '+.135top.com'
   - '+.135yuedu.com'
   - '+.136.com'
   - '+.1360.com'
@@ -2044,7 +2040,6 @@ payload:
   - '+.2265.com'
   - '+.226500.com'
   - '+.226531.com'
-  - '+.226y.com'
   - '+.2280.com'
   - '+.2281wa.ren'
   - '+.2288.org'
@@ -2692,7 +2687,6 @@ payload:
   - '+.360510.com'
   - '+.36099.com'
   - '+.360abc.com'
-  - '+.360aiyi.com'
   - '+.360anyu.com'
   - '+.360bifen.net'
   - '+.360biji.com'
@@ -5169,6 +5163,7 @@ payload:
   - '+.67mo.com'
   - '+.67wanwan.com'
   - '+.67yes.com'
+  - '+.68.com'
   - '+.680.com'
   - '+.68120120.com'
   - '+.6816.com'
@@ -5363,6 +5358,7 @@ payload:
   - '+.71wl.com'
   - '+.71xe.com'
   - '+.71zs.com'
+  - '+.72.com'
   - '+.720582.com'
   - '+.720pmovie.com'
   - '+.720static.com'
@@ -5466,7 +5462,6 @@ payload:
   - '+.76dongdong.com'
   - '+.76ju.com'
   - '+.76wu.com'
-  - '+.76xh.com'
   - '+.76y.com'
   - '+.76zu.com'
   - '+.770921.com'
@@ -5535,7 +5530,6 @@ payload:
   - '+.782yx.com'
   - '+.78302.com'
   - '+.78360.net'
-  - '+.7849.com'
   - '+.7878hk.com'
   - '+.7881.com'
   - '+.788511.com'
@@ -5598,7 +5592,6 @@ payload:
   - '+.7cname.com'
   - '+.7cxk.com'
   - '+.7dah8.com'
-  - '+.7dapei.com'
   - '+.7didc.com'
   - '+.7do.net'
   - '+.7down.net'
@@ -6012,7 +6005,6 @@ payload:
   - '+.88520.cc'
   - '+.885210.net'
   - '+.8855.org'
-  - '+.885533.com'
   - '+.885741.com'
   - '+.88582.com'
   - '+.8858a.com'
@@ -6138,7 +6130,6 @@ payload:
   - '+.8miu.com'
   - '+.8miu.net'
   - '+.8ms.xyz'
-  - '+.8mu8.com'
   - '+.8n2.com'
   - '+.8n6n.com'
   - '+.8njy.com'
@@ -6604,7 +6595,6 @@ payload:
   - '+.96189.com'
   - '+.9618968.com'
   - '+.962.net'
-  - '+.96211.com'
   - '+.962121.net'
   - '+.962168.com'
   - '+.962222.net'
@@ -6621,6 +6611,7 @@ payload:
   - '+.96520.com'
   - '+.96533.com'
   - '+.965373.com'
+  - '+.96590.net'
   - '+.9665.com'
   - '+.966599.com'
   - '+.9666sr.com'
@@ -6775,7 +6766,6 @@ payload:
   - '+.99988866.xyz'
   - '+.99997aaa.com'
   - '+.99998aaa.com'
-  - '+.99999net.net'
   - '+.999ask.com'
   - '+.999bj.com'
   - '+.999brain.com'
@@ -7564,7 +7554,6 @@ payload:
   - '+.aichaicp.com'
   - '+.aichaoxing.com'
   - '+.aichat.net'
-  - '+.aichawu.com'
   - '+.aichunjing.com'
   - '+.aiclicash.com'
   - '+.aiclk.com'
@@ -10635,7 +10624,6 @@ payload:
   - '+.biqugex.com'
   - '+.biqugexs.com'
   - '+.biqugexs.la'
-  - '+.biqugexsw.com'
   - '+.biqugexsw8.com'
   - '+.biqugexx.com'
   - '+.biquguan.com'
@@ -11873,7 +11861,6 @@ payload:
   - '+.c-cnc.com'
   - '+.c-cpp.com'
   - '+.c-ctrip.com'
-  - '+.c-e-m.com'
   - '+.c-estbon.com'
   - '+.c-fol.net'
   - '+.c-lodop.com'
@@ -12275,7 +12262,6 @@ payload:
   - '+.cavca.org'
   - '+.cawae.net'
   - '+.caxa.com'
-  - '+.caylor.cc'
   - '+.cazpw.com'
   - '+.cbca.net'
   - '+.cbcie.com'
@@ -12361,7 +12347,6 @@ payload:
   - '+.ccddvr.com'
   - '+.ccdol.com'
   - '+.ccea.pro'
-  - '+.cceai.com'
   - '+.cceato.com'
   - '+.ccedisp.com'
   - '+.ccedpw.com'
@@ -13021,7 +13006,6 @@ payload:
   - '+.cgwenjian.com'
   - '+.cgwic.com'
   - '+.cgws.com'
-  - '+.cgxc.cc'
   - '+.cgxia.com'
   - '+.cgxm.net'
   - '+.cgylke.com'
@@ -14655,6 +14639,7 @@ payload:
   - '+.cjienc.com'
   - '+.cjiit.com'
   - '+.cjjd04.com'
+  - '+.cjjd05.com'
   - '+.cjjd06.com'
   - '+.cjjd07.com'
   - '+.cjjd08.com'
@@ -15637,7 +15622,6 @@ payload:
   - '+.codingke.com'
   - '+.codinglabs.org'
   - '+.codingpy.com'
-  - '+.codingserf.com'
   - '+.codingsky.com'
   - '+.codingwhy.com'
   - '+.codingyang.com'
@@ -16227,7 +16211,6 @@ payload:
   - '+.csdn.com'
   - '+.csdn.net'
   - '+.csdnxiazai.xyz'
-  - '+.csdxcw.com'
   - '+.csdyx.com'
   - '+.csea767.com'
   - '+.csebank.com'
@@ -17762,7 +17745,6 @@ payload:
   - '+.dhkqmz.com'
   - '+.dhkqyy.com'
   - '+.dhmeri.com'
-  - '+.dhq898.com'
   - '+.dhqtech.com'
   - '+.dhrcbank.com'
   - '+.dhrest.com'
@@ -17789,7 +17771,6 @@ payload:
   - '+.dian234.com'
   - '+.dian321.com'
   - '+.dian5.com'
-  - '+.diananjia.com'
   - '+.dianapp.com'
   - '+.dianbo.org'
   - '+.dianbobao.com'
@@ -18608,7 +18589,6 @@ payload:
   - '+.douban.fm'
   - '+.doubanio.com'
   - '+.doubean.com'
-  - '+.doubi.ren'
   - '+.doubilm.com'
   - '+.doubimeizhi.com'
   - '+.douboshi.net'
@@ -19263,7 +19243,6 @@ payload:
   - '+.dz31hao.com'
   - '+.dz746.com'
   - '+.dz88.com'
-  - '+.dz88.la'
   - '+.dzbake.com'
   - '+.dzbarcode.com'
   - '+.dzbchina.com'
@@ -20540,6 +20519,7 @@ payload:
   - '+.ewecha.com'
   - '+.ewei.com'
   - '+.eweiqi.com'
+  - '+.ewen.co'
   - '+.ewenyan.com'
   - '+.ewerew.com'
   - '+.ewide.net'
@@ -21347,7 +21327,6 @@ payload:
   - '+.fengzhangame.net'
   - '+.fengzixbs.com'
   - '+.fenha.net'
-  - '+.fenhao.me'
   - '+.fenking.club'
   - '+.fenlei168.com'
   - '+.fenlei265.com'
@@ -22060,7 +22039,6 @@ payload:
   - '+.fthformal.com'
   - '+.ftium4.com'
   - '+.ftnormal00ab.com'
-  - '+.ftnormal00ak.com'
   - '+.ftnormal01as.com'
   - '+.ftqq.com'
   - '+.ftsafe.com'
@@ -23312,7 +23290,6 @@ payload:
   - '+.gmcc.net'
   - '+.gmcchina.net'
   - '+.gmdun.com'
-  - '+.gmecity.com'
   - '+.gmed.cc'
   - '+.gmem.cc'
   - '+.gmfintl.com'
@@ -23673,7 +23650,6 @@ payload:
   - '+.gpbctv.com'
   - '+.gpbeta.com'
   - '+.gpcqjy.com'
-  - '+.gpcxw.com'
   - '+.gpd.hk'
   - '+.gpdi.com'
   - '+.gper.club'
@@ -24610,7 +24586,6 @@ payload:
   - '+.hackrf.net'
   - '+.hackroad.com'
   - '+.hacori.com'
-  - '+.hacpai.com'
   - '+.haczjob.com'
   - '+.hadax.com'
   - '+.hadobi.com'
@@ -24784,7 +24759,6 @@ payload:
   - '+.haiyuhe.com'
   - '+.haiyun.me'
   - '+.haiyunx.com'
-  - '+.haiyusoft.com'
   - '+.haizhangs.com'
   - '+.haizhanweb.com'
   - '+.haizhixing.net'
@@ -25676,7 +25650,6 @@ payload:
   - '+.heiyan.org'
   - '+.heiyange.com'
   - '+.heiyanimg.com'
-  - '+.heiyanwang.com'
   - '+.heiying.cc'
   - '+.heiyuewan.com'
   - '+.heiyunxitong.com'
@@ -28012,6 +27985,7 @@ payload:
   - '+.hzqlpt.com'
   - '+.hzqx.com'
   - '+.hzr1.com'
+  - '+.hzranqu.com'
   - '+.hzrc.com'
   - '+.hzredream.com'
   - '+.hzrobam.com'
@@ -28387,7 +28361,6 @@ payload:
   - '+.iconfans.com'
   - '+.iconfans.org'
   - '+.iconntech.com'
-  - '+.icoolen.com'
   - '+.icoou.com'
   - '+.icoremail.net'
   - '+.icos8.com'
@@ -28460,7 +28433,6 @@ payload:
   - '+.idc400.com'
   - '+.idc45.com'
   - '+.idc789.com'
-  - '+.idc886.com'
   - '+.idc917.com'
   - '+.idc96.net'
   - '+.idcay.com'
@@ -28993,7 +28965,6 @@ payload:
   - '+.im520.com'
   - '+.im577.com'
   - '+.im5i.com'
-  - '+.im87.net'
   - '+.imaccn.com'
   - '+.imaegoo.com'
   - '+.imageaccelerate.com'
@@ -29362,6 +29333,7 @@ payload:
   - '+.interotc.net'
   - '+.intertid.com'
   - '+.interval.im'
+  - '+.intimerent.com'
   - '+.intio.org'
   - '+.intl-hzc.com'
   - '+.intlgame.com'
@@ -30515,7 +30487,6 @@ payload:
   - '+.jhctbank.com'
   - '+.jhdqz.com'
   - '+.jhdxjk.com'
-  - '+.jhfgg.com'
   - '+.jhfl.com'
   - '+.jhforever.com'
   - '+.jhgtgb.com'
@@ -30772,7 +30743,6 @@ payload:
   - '+.jiasale.com'
   - '+.jiashuangkuaizi.com'
   - '+.jiashule.com'
-  - '+.jiaston.com'
   - '+.jiasuba.com'
   - '+.jiasubook.com'
   - '+.jiasudu666.com'
@@ -31390,7 +31360,6 @@ payload:
   - '+.jiyouwang.com'
   - '+.jiyuncn.com'
   - '+.jizhan.com'
-  - '+.jizhangapp.com'
   - '+.jizhangzhuce.com'
   - '+.jizhiba.com'
   - '+.jizhidsp.com'
@@ -32532,7 +32501,6 @@ payload:
   - '+.k38s0.xyz'
   - '+.k4nz.com'
   - '+.k518.com'
-  - '+.k5k1.com'
   - '+.k5n.com'
   - '+.k6271.com'
   - '+.k666.com'
@@ -32585,7 +32553,6 @@ payload:
   - '+.kaifangkecheng.com'
   - '+.kaifapiao.com'
   - '+.kaifaxueyuan.com'
-  - '+.kaifenghenan.com'
   - '+.kaifu.com'
   - '+.kaifuzq.com'
   - '+.kaige68.com'
@@ -32593,7 +32560,6 @@ payload:
   - '+.kaihu51.com'
   - '+.kaihuia.com'
   - '+.kaijia.com'
-  - '+.kaijia.me'
   - '+.kaikeba.com'
   - '+.kailincheng.com'
   - '+.kailing.pub'
@@ -32852,7 +32818,6 @@ payload:
   - '+.kd21xs.com'
   - '+.kd9000.com'
   - '+.kdatacenter.com'
-  - '+.kdbbx.com'
   - '+.kdd.cc'
   - '+.kdfax.com'
   - '+.kdige.com'
@@ -35154,6 +35119,7 @@ payload:
   - '+.lingaoren.com'
   - '+.lingb.net'
   - '+.lingbao-e.com'
+  - '+.lingchusw.xyz'
   - '+.lingd.cc'
   - '+.lingd.com'
   - '+.lingdai.name'
@@ -35256,7 +35222,6 @@ payload:
   - '+.linkrall-trk.com'
   - '+.linkresearcher.com'
   - '+.linkscue.com'
-  - '+.linksfin.com'
   - '+.linksgood.com'
   - '+.linkshop.com'
   - '+.linksoon.net'
@@ -37062,7 +37027,6 @@ payload:
   - '+.mayi.com'
   - '+.mayiangel.com'
   - '+.mayicms.com'
-  - '+.mayidui.net'
   - '+.mayihr.com'
   - '+.mayijieqian.com'
   - '+.mayima.net'
@@ -37769,7 +37733,6 @@ payload:
   - '+.mihtool.com'
   - '+.mihua.net'
   - '+.mihuashi.com'
-  - '+.mihuguan.com'
   - '+.mihui365.com'
   - '+.mihuwa.com'
   - '+.miicp.com'
@@ -38168,7 +38131,6 @@ payload:
   - '+.mmzh.com'
   - '+.mn-soft.com'
   - '+.mnancheng.com'
-  - '+.mnbkw.com'
   - '+.mnbvtgv.com'
   - '+.mng0303.com'
   - '+.mnihyc.com'
@@ -39943,7 +39905,6 @@ payload:
   - '+.noahedu.com'
   - '+.noahsnail.com'
   - '+.noahteck.com'
-  - '+.nobanus.com'
   - '+.nobmoo.com'
   - '+.nocang.com'
   - '+.nocare.com'
@@ -41281,7 +41242,6 @@ payload:
   - '+.pblie.com'
   - '+.pbsidc.com'
   - '+.pbsvpn.com'
-  - '+.pbtdl.com'
   - '+.pbtxt.com'
   - '+.pc-daily.com'
   - '+.pc120.com'
@@ -42244,7 +42204,6 @@ payload:
   - '+.programmer.ink'
   - '+.programschool.com'
   - '+.progressingeography.com'
-  - '+.prohui.com'
   - '+.project-oa.com'
   - '+.projectaker.com'
   - '+.projector-window.com'
@@ -42278,7 +42237,6 @@ payload:
   - '+.pse-meti.com'
   - '+.psgui.com'
   - '+.psing.tech'
-  - '+.psjay.com'
   - '+.psjxty.com'
   - '+.psnine.com'
   - '+.psoneart.com'
@@ -42516,7 +42474,6 @@ payload:
   - '+.qbjrxs.com'
   - '+.qbox.me'
   - '+.qbox.net'
-  - '+.qbtlk.com'
   - '+.qbview.com'
   - '+.qbxz.com'
   - '+.qc-dds.net'
@@ -43925,7 +43882,6 @@ payload:
   - '+.qvkanwen.com'
   - '+.qvlz.com'
   - '+.qvpublish.com'
-  - '+.qvxo.com'
   - '+.qwdacy.com'
   - '+.qweather.com'
   - '+.qweather.net'
@@ -43941,7 +43897,6 @@ payload:
   - '+.qwqk.net'
   - '+.qwqoffice.com'
   - '+.qwsy.com'
-  - '+.qwupoq.com'
   - '+.qwxcs.com'
   - '+.qwxsw.com'
   - '+.qwzhe.com'
@@ -44783,7 +44738,6 @@ payload:
   - '+.rrppt.com'
   - '+.rrr.me'
   - '+.rrrdai.com'
-  - '+.rrrmj.com'
   - '+.rrrrdaimao.com'
   - '+.rrrxz.com'
   - '+.rrs.com'
@@ -44914,11 +44868,11 @@ payload:
   - '+.ruketang.com'
   - '+.rulejianzhan.com'
   - '+.rulesofsurvivalgame.com'
-  - '+.rum8.perf.linkedin.com'
   - '+.rumt-sg.com'
   - '+.rumt-zh.com'
   - '+.runcmd.com'
   - '+.runcome.com'
+  - '+.rundamedical.com'
   - '+.runde666.net'
   - '+.rundejy.com'
   - '+.rundongex.com'
@@ -46219,7 +46173,6 @@ payload:
   - '+.sheepmats.com'
   - '+.sheetgit.com'
   - '+.sheinet.com'
-  - '+.sheizhiwo.com'
   - '+.sheji.com'
   - '+.shejibao.com'
   - '+.shejiben.com'
@@ -46271,6 +46224,7 @@ payload:
   - '+.shenghefilms.com'
   - '+.shengheplastic.com'
   - '+.shenghui56.com'
+  - '+.shenghuo365.com'
   - '+.shenghuojia.com'
   - '+.shenghuorili.com'
   - '+.shenghuowo.com'
@@ -48007,7 +47961,6 @@ payload:
   - '+.soukecheng.net'
   - '+.soukf.com'
   - '+.soukuyou.com'
-  - '+.soulady.net'
   - '+.soulapp.me'
   - '+.souldee.com'
   - '+.soulgame.mobi'
@@ -50018,7 +49971,6 @@ payload:
   - '+.tenlonstudio.com'
   - '+.tenlywu.com'
   - '+.tenmh.com'
-  - '+.tennisworld.mobi'
   - '+.tennoo.com'
   - '+.tenpay.com'
   - '+.tenqent.com'
@@ -51614,7 +51566,6 @@ payload:
   - '+.tuyoujp.com'
   - '+.tuyoumi.com'
   - '+.tuyouxinxi.net'
-  - '+.tuyuantech.com'
   - '+.tuzhan.com'
   - '+.tuzhan.net'
   - '+.tuzhanai.com'
@@ -51633,7 +51584,6 @@ payload:
   - '+.tvandnet.com'
   - '+.tvapk.com'
   - '+.tvapk.net'
-  - '+.tvb1.cc'
   - '+.tvbbj.com'
   - '+.tvblack.com'
   - '+.tvbwind.com'
@@ -51960,9 +51910,6 @@ payload:
   - '+.uchuhimo.me'
   - '+.ucicq.com'
   - '+.ucjoy.com'
-  - '+.uclmad.com'
-  - '+.uclmimg.com'
-  - '+.uclmjs.com'
   - '+.ucloudgda.com'
   - '+.ucloudnaming.info'
   - '+.uclouds3.com'
@@ -53741,7 +53688,6 @@ payload:
   - '+.wdfangyi.com'
   - '+.wdfxw.net'
   - '+.wdghy.com'
-  - '+.wdinter.com'
   - '+.wdiyi.com'
   - '+.wdjimg.com'
   - '+.wdjky.com'
@@ -54622,7 +54568,6 @@ payload:
   - '+.whsyy.net'
   - '+.whtbq.com'
   - '+.whtcm.com'
-  - '+.whtcm.net'
   - '+.whtdcb.com'
   - '+.whtdsc.com'
   - '+.whtfzy.com'
@@ -54980,7 +54925,6 @@ payload:
   - '+.wl369.com'
   - '+.wlanadmin.com'
   - '+.wlanbanlv.com'
-  - '+.wlanwifi.net'
   - '+.wlcbnews.com'
   - '+.wlcbw.com'
   - '+.wlcxx.com'
@@ -55487,7 +55431,6 @@ payload:
   - '+.wtdex.com'
   - '+.wtdms.com'
   - '+.wting.info'
-  - '+.wtmmn.com'
   - '+.wtn5.com'
   - '+.wtobag.com'
   - '+.wtoip.com'
@@ -55568,7 +55511,6 @@ payload:
   - '+.wuhanpep.com'
   - '+.wuhanport.com'
   - '+.wuhanrt.com'
-  - '+.wuhansailingclub.com'
   - '+.wuhantest.com'
   - '+.wuhantianqi114.com'
   - '+.wuhantskj.com'
@@ -55865,7 +55807,6 @@ payload:
   - '+.wyaoqing.com'
   - '+.wybbao.com'
   - '+.wybgs.com'
-  - '+.wycanyin.com'
   - '+.wycntv.com'
   - '+.wydbw.com'
   - '+.wydfghjjh.live'
@@ -55873,6 +55814,7 @@ payload:
   - '+.wydns.com'
   - '+.wyduihua.com'
   - '+.wyh138.com'
+  - '+.wyhos.fun'
   - '+.wyins.net'
   - '+.wykefu.com'
   - '+.wyktwx.com'
@@ -57498,7 +57440,6 @@ payload:
   - '+.xjisme.com'
   - '+.xjiyou.com'
   - '+.xjjnjp.org'
-  - '+.xjltp.com'
   - '+.xjlxw.com'
   - '+.xjlz365.com'
   - '+.xjmty.com'
@@ -57577,7 +57518,6 @@ payload:
   - '+.xlpai.com'
   - '+.xlpan.com'
   - '+.xlqzh.com'
-  - '+.xlrocket.com'
   - '+.xlsemi.com'
   - '+.xlshou.com'
   - '+.xltrip.com'
@@ -57990,7 +57930,6 @@ payload:
   - '+.xueguoedu.net'
   - '+.xuehai.net'
   - '+.xuehaibjb.com'
-  - '+.xuehaoba.com'
   - '+.xuehuacdn.com'
   - '+.xuehuahua.cc'
   - '+.xuehuahua.net'
@@ -58447,7 +58386,6 @@ payload:
   - '+.yaahe.com'
   - '+.yabo.com'
   - '+.yabolive.com'
-  - '+.yabovip2029.com'
   - '+.yac8.com'
   - '+.yac8.net'
   - '+.yadashi.com'
@@ -58581,6 +58519,7 @@ payload:
   - '+.yankanshu.net'
   - '+.yankay.com'
   - '+.yanliu.org'
+  - '+.yanlutong.com'
   - '+.yanmbjiage.com'
   - '+.yannaisi.com'
   - '+.yannv.com'
@@ -58922,6 +58861,7 @@ payload:
   - '+.yespearl.com'
   - '+.yestar.com'
   - '+.yestar1992.com'
+  - '+.yestarcorp.com'
   - '+.yestarm.com'
   - '+.yestarvip.com'
   - '+.yeston.net'
@@ -59417,6 +59357,7 @@ payload:
   - '+.yipinhr.com'
   - '+.yipinread.com'
   - '+.yipinsucai.com'
+  - '+.yipintemian.com'
   - '+.yipuping.com'
   - '+.yiqi.com'
   - '+.yiqianbao.com'
@@ -60414,7 +60355,6 @@ payload:
   - '+.ysyycv.com'
   - '+.yszx99.com'
   - '+.yszyun.com'
-  - '+.yszyz.com'
   - '+.yszzlt.com'
   - '+.yt1998.com'
   - '+.yt1a.icu'
@@ -60578,7 +60518,6 @@ payload:
   - '+.yuejuanbao.com'
   - '+.yuekenet.com'
   - '+.yuekeyun.com'
-  - '+.yuelong.info'
   - '+.yueloo.com'
   - '+.yuelu.net'
   - '+.yuelun.com'
@@ -60655,7 +60594,6 @@ payload:
   - '+.yule116.com'
   - '+.yule263.com'
   - '+.yuledaily.com'
-  - '+.yulefm.com'
   - '+.yulehezi.com'
   - '+.yuleie.com'
   - '+.yulejiaodian.com'
@@ -60664,7 +60602,6 @@ payload:
   - '+.yuleres.com'
   - '+.yuli.be'
   - '+.yulicdn.com'
-  - '+.yuliechina.com'
   - '+.yulinapp.com'
   - '+.yulingtianxia.com'
   - '+.yulongjun.com'
@@ -62118,7 +62055,6 @@ payload:
   - '+.zhgl.com'
   - '+.zhgnj.com'
   - '+.zhgqt.com'
-  - '+.zhgsw.com'
   - '+.zhguoguo.com'
   - '+.zhhainiao.com'
   - '+.zhhrm.com'
@@ -62230,7 +62166,6 @@ payload:
   - '+.zhiliangren.com'
   - '+.zhiliaoke.com'
   - '+.zhiliaomj.com'
-  - '+.zhilii.com'
   - '+.zhilingshidai.com'
   - '+.zhilong.me'
   - '+.zhilongtech.com'
@@ -62693,7 +62628,6 @@ payload:
   - '+.zhuoyoutech.com'
   - '+.zhuoyuanxinfang.com'
   - '+.zhuoyue.wang'
-  - '+.zhuoyuebbs.com'
   - '+.zhuoyuechenxing.com'
   - '+.zhuozhengsoft.com'
   - '+.zhuozhoufangchan.com'
@@ -63109,6 +63043,7 @@ payload:
   - '+.zkl2333.com'
   - '+.zkoffcn.com'
   - '+.zkpk.org'
+  - '+.zkrdlab.com'
   - '+.zkread.com'
   - '+.zkroom.com'
   - '+.zksoftwaresz.com'
@@ -63377,7 +63312,6 @@ payload:
   - '+.zqwzc.com'
   - '+.zqxsc.com'
   - '+.zqygame.com'
-  - '+.zqzj.org'
   - '+.zqzyxx.com'
   - '+.zrahh.com'
   - '+.zrblog.net'
@@ -63619,6 +63553,7 @@ payload:
   - '+.zuojiawang.com'
   - '+.zuojing.com'
   - '+.zuojj.com'
+  - '+.zuokesteak.com'
   - '+.zuolinyouli.vip'
   - '+.zuoqu.com'
   - '+.zuoqudashi.net'
