--- a/directbak.yaml
+++ b/directbak.yaml
@@ -417,7 +417,6 @@ payload:
   - '+.06peng.com'
   - '+.07.la'
   - '+.0701news.com'
-  - '+.0704tv.com'
   - '+.07073.com'
   - '+.07073h5.com'
   - '+.07073sy.com'
@@ -572,7 +571,6 @@ payload:
   - '+.0914cn.com'
   - '+.0915home.com'
   - '+.091601.com'
-  - '+.0916auto.com'
   - '+.0917.com'
   - '+.0917e.com'
   - '+.0919123.com'
@@ -609,6 +607,7 @@ payload:
   - '+.0kee.com'
   - '+.0qda82zu.com'
   - '+.0rl.cc'
+  - '+.0s52.com'
   - '+.0s8s.com'
   - '+.0sm.com'
   - '+.0x0.biz'
@@ -1919,7 +1918,6 @@ payload:
   - '+.2144.com'
   - '+.2144gy.com'
   - '+.214yx.com'
-  - '+.21511fff.com'
   - '+.2155.com'
   - '+.216tt.com'
   - '+.217.net'
@@ -2113,7 +2111,6 @@ payload:
   - '+.236z.com'
   - '+.237y.com'
   - '+.2380.in'
-  - '+.23900341.com'
   - '+.239334.cc'
   - '+.23bei.com'
   - '+.23book.com'
@@ -2447,7 +2444,6 @@ payload:
   - '+.315online.com'
   - '+.315sc.org'
   - '+.315tech.com'
-  - '+.315wangdai.com'
   - '+.315z.net'
   - '+.315zw.com'
   - '+.31609.com'
@@ -3287,7 +3283,6 @@ payload:
   - '+.425yx.com'
   - '+.42651.com'
   - '+.426g.com'
-  - '+.42824.com'
   - '+.429006.com'
   - '+.42927bj.com'
   - '+.42927gz.com'
@@ -4755,7 +4750,6 @@ payload:
   - '+.5fun.com'
   - '+.5fwan.com'
   - '+.5gcg.com'
-  - '+.5ggm.com'
   - '+.5glianc.com'
   - '+.5goto.com'
   - '+.5gseo.net'
@@ -5640,7 +5634,6 @@ payload:
   - '+.7mah2.com'
   - '+.7mo.cc'
   - '+.7modifier.com'
-  - '+.7moe.com'
   - '+.7moor-fs1.com'
   - '+.7moor-fs2.com'
   - '+.7moor.com'
@@ -9615,6 +9608,7 @@ payload:
   - '+.bangyike.com'
   - '+.bangzechem.com'
   - '+.bangzhufu.com'
+  - '+.banjia1680.com'
   - '+.banjiajia.com'
   - '+.banjiamao.com'
   - '+.banjixiaoguanjia.com'
@@ -10697,6 +10691,7 @@ payload:
   - '+.bitsde.com'
   - '+.bitse.com'
   - '+.bitsqa.com'
+  - '+.bittopmall.com'
   - '+.bitu360.com'
   - '+.bitvh.com'
   - '+.biubiu.tv'
@@ -11007,6 +11002,7 @@ payload:
   - '+.bjzwzx.com'
   - '+.bjzxcp.com'
   - '+.bjzyrxgs.com'
+  - '+.bk-cdn.com'
   - '+.bk41.net'
   - '+.bk5u.com'
   - '+.bkbyxa.com'
@@ -11014,6 +11010,7 @@ payload:
   - '+.bkdou.com'
   - '+.bkill.net'
   - '+.bkjk-inc.com'
+  - '+.bkjk.com'
   - '+.bkjpress.com'
   - '+.bkn.cc'
   - '+.bkpcn.com'
@@ -11864,6 +11861,7 @@ payload:
   - '+.c-estbon.com'
   - '+.c-fol.net'
   - '+.c-lodop.com'
+  - '+.c-nin.com'
   - '+.c-ps.net'
   - '+.c-rst.com'
   - '+.c-sky.com'
@@ -12003,6 +12001,7 @@ payload:
   - '+.caijingcaipiao22270.com'
   - '+.caijingche.com'
   - '+.caijingmobile.com'
+  - '+.caijingwa.com'
   - '+.caijingwu.com'
   - '+.caijinyuan.com'
   - '+.caijixia.com'
@@ -12157,7 +12156,6 @@ payload:
   - '+.canyuanzs.com'
   - '+.caobao.com'
   - '+.caogen.com'
-  - '+.caogen88.com'
   - '+.caohaifeng.com'
   - '+.caohejing.com'
   - '+.caohejing.org'
@@ -12659,6 +12657,7 @@ payload:
   - '+.cdnet110.com'
   - '+.cdnetdns.net'
   - '+.cdnff.com'
+  - '+.cdngogo2.cc'
   - '+.cdngslb.com'
   - '+.cdngslb8.com'
   - '+.cdngtm.com'
@@ -12696,7 +12695,6 @@ payload:
   - '+.cdnvue.com'
   - '+.cdnyoyun.com'
   - '+.cdnyt69.com'
-  - '+.cdnyzdjj.com'
   - '+.cdooc.com'
   - '+.cdqcnt.com'
   - '+.cdqcp.com'
@@ -14006,6 +14004,7 @@ payload:
   - '+.chinasou.com'
   - '+.chinasoushang.com'
   - '+.chinaspringtown.com'
+  - '+.chinasrif.com'
   - '+.chinassl.com'
   - '+.chinassl.net'
   - '+.chinasspp.com'
@@ -16031,9 +16030,9 @@ payload:
   - '+.cqqnb.net'
   - '+.cqqp.com'
   - '+.cqqsyy.com'
-  - '+.cqqzgrh.com'
   - '+.cqrc.net'
   - '+.cqrcb.com'
+  - '+.cqsckj02.com'
   - '+.cqscmy.net'
   - '+.cqshenou.com'
   - '+.cqslib.org'
@@ -17513,6 +17512,7 @@ payload:
   - '+.demaxiya.com'
   - '+.demix.cc'
   - '+.demixc.com'
+  - '+.demizhongbao.com'
   - '+.demlution.com'
   - '+.demo8.com'
   - '+.demodashi.com'
@@ -19860,7 +19860,6 @@ payload:
   - '+.efy-tech.com'
   - '+.egainnews.com'
   - '+.egcmedia.com'
-  - '+.egfcare.com'
   - '+.egg-born.org'
   - '+.egg.htcsense.com'
   - '+.eggjs.org'
@@ -20639,7 +20638,6 @@ payload:
   - '+.eyou.com'
   - '+.eyou.net'
   - '+.eyoucms.com'
-  - '+.eyoujj.com'
   - '+.eyourbusiness.com'
   - '+.eyrefree.org'
   - '+.eyu2017.xyz'
@@ -21941,6 +21939,7 @@ payload:
   - '+.freemoban.com'
   - '+.freemudgame.com'
   - '+.freeoa.net'
+  - '+.freeok.vip'
   - '+.freeqingnovel.com'
   - '+.freericheyes.com'
   - '+.freeshoppingchina.com'
@@ -22758,7 +22757,6 @@ payload:
   - '+.gdlins.com'
   - '+.gdls114.com'
   - '+.gdlsgz.com'
-  - '+.gdmappress.com'
   - '+.gdmingshizx.com'
   - '+.gdmm.com'
   - '+.gdmoa.org'
@@ -22809,7 +22807,6 @@ payload:
   - '+.gdysdz.com'
   - '+.gdyunyin.net'
   - '+.gdyxc.com'
-  - '+.gdzhbxg.com'
   - '+.gdzhongshan.com'
   - '+.gdzp.org'
   - '+.gdzrlj.com'
@@ -23860,6 +23857,7 @@ payload:
   - '+.gtm-i1d7.com'
   - '+.gtm-i1d8.com'
   - '+.gtm-i1d9.com'
+  - '+.gtm-i2d4.com'
   - '+.gtm-i2d8.com'
   - '+.gtm-i2d9.com'
   - '+.gtmlufax.com'
@@ -23983,7 +23981,6 @@ payload:
   - '+.guduodata.com'
   - '+.guestops.com'
   - '+.gufengmh9.com'
-  - '+.guge.tw'
   - '+.gugeanzhuangqi.com'
   - '+.gugeapps.net'
   - '+.gugong.net'
@@ -26538,7 +26535,6 @@ payload:
   - '+.honda-sundiro.com'
   - '+.hong-lawfirm.com'
   - '+.hong-shun.com'
-  - '+.hong.ren'
   - '+.hongbao.show'
   - '+.hongbeibang.com'
   - '+.hongbeicn.com'
@@ -27817,7 +27813,6 @@ payload:
   - '+.hxytw.com'
   - '+.hxyxsj.com'
   - '+.hxzq.net'
-  - '+.hxzs31.com'
   - '+.hy-la.com'
   - '+.hy-zr.com'
   - '+.hy01888.com'
@@ -27932,6 +27927,7 @@ payload:
   - '+.hzeg.com'
   - '+.hzfc.cc'
   - '+.hzfeiyao.com'
+  - '+.hzfolo.com'
   - '+.hzfucai.net'
   - '+.hzgh.org'
   - '+.hzgjj.com'
@@ -28755,7 +28751,6 @@ payload:
   - '+.ihref.com'
   - '+.ihrscloud.com'
   - '+.ihuaben.com'
-  - '+.ihuajian.net'
   - '+.ihuan.me'
   - '+.ihuanling.com'
   - '+.ihuanque.com'
@@ -31423,6 +31418,7 @@ payload:
   - '+.jjkucunxie.com'
   - '+.jjldbk.com'
   - '+.jjldxz.com'
+  - '+.jjlvu.com'
   - '+.jjmatch.com'
   - '+.jjmh.com'
   - '+.jjmkids.com'
@@ -31509,6 +31505,7 @@ payload:
   - '+.jlr360.com'
   - '+.jlsdzgckcy.com'
   - '+.jlsemi.com'
+  - '+.jlsjsxxw.com'
   - '+.jlspr.com'
   - '+.jltyjxzz.com'
   - '+.jlwlyx.com'
@@ -32282,6 +32279,7 @@ payload:
   - '+.jxage.com'
   - '+.jxal.net'
   - '+.jxbhwl.com'
+  - '+.jxbqmt.com'
   - '+.jxc4.com'
   - '+.jxcaipu.com'
   - '+.jxcb.net'
@@ -32497,7 +32495,6 @@ payload:
   - '+.k345.cc'
   - '+.k366.com'
   - '+.k369.com'
-  - '+.k3887.com'
   - '+.k38s0.xyz'
   - '+.k4nz.com'
   - '+.k518.com'
@@ -32743,6 +32740,7 @@ payload:
   - '+.kaoshishenqi.net'
   - '+.kaoshizixun.com'
   - '+.kaotipai.com'
+  - '+.kaotop.com'
   - '+.kaowana.com'
   - '+.kaowang.com'
   - '+.kaoyan.com'
@@ -32820,6 +32818,7 @@ payload:
   - '+.kdatacenter.com'
   - '+.kdd.cc'
   - '+.kdfax.com'
+  - '+.kdhlw.com'
   - '+.kdige.com'
   - '+.kdniao.com'
   - '+.kdpt.net'
@@ -34278,7 +34277,6 @@ payload:
   - '+.laozu.com'
   - '+.laozuo.org'
   - '+.lapin365.com'
-  - '+.laqiangu.com'
   - '+.laravel-admin.org'
   - '+.laravel-china.org'
   - '+.laravelacademy.org'
@@ -34296,6 +34294,7 @@ payload:
   - '+.lastdream.net'
   - '+.lasy.site'
   - '+.lategege.com'
+  - '+.latepost.com'
   - '+.latexstudio.net'
   - '+.latin100.com'
   - '+.lativ.com'
@@ -35311,7 +35310,6 @@ payload:
   - '+.lionelliu.com'
   - '+.lionmobo.com'
   - '+.lionmobo.net'
-  - '+.lipai365.com'
   - '+.lipian.com'
   - '+.lipiji.com'
   - '+.lipilianghang.com'
@@ -35454,7 +35452,6 @@ payload:
   - '+.liuyanzhao.com'
   - '+.liuyifei.cc'
   - '+.liuzaoqi.com'
-  - '+.liuzhichao.com'
   - '+.liuzhixiang.com'
   - '+.liuzongyang.com'
   - '+.liuzuo.com'
@@ -36442,6 +36439,7 @@ payload:
   - '+.lytning.xyz'
   - '+.lytoufang.com'
   - '+.lytpw.com'
+  - '+.lytuchuang10.com'
   - '+.lytuchuang2.com'
   - '+.lytuchuang3.com'
   - '+.lytuchuang4.com'
@@ -38364,6 +38362,7 @@ payload:
   - '+.moogos.com'
   - '+.moojing.com'
   - '+.moojnn.com'
+  - '+.moolsun.com'
   - '+.moomoo.com'
   - '+.moonbasa.com'
   - '+.moonbook.com'
@@ -39118,7 +39117,6 @@ payload:
   - '+.nagain.com'
   - '+.nagcloudcs.com'
   - '+.nagekuai.com'
-  - '+.nahan.org'
   - '+.nahuayuan.com'
   - '+.nahuo.com'
   - '+.nahuo9.com'
@@ -39144,7 +39142,6 @@ payload:
   - '+.nalichi.com'
   - '+.name1688.com'
   - '+.name2012.com'
-  - '+.name5566.com'
   - '+.nameidi.com'
   - '+.namepre.com'
   - '+.namesilopro.com'
@@ -39794,7 +39791,6 @@ payload:
   - '+.njdewo.com'
   - '+.njdfwb.com'
   - '+.njgb.com'
-  - '+.njgep.com'
   - '+.njgjj.com'
   - '+.njhaiwai.com'
   - '+.njhengyou.com'
@@ -40073,7 +40069,6 @@ payload:
   - '+.ntdvf.com'
   - '+.ntechw.com'
   - '+.ntefyxq.com'
-  - '+.ntejiazheng.com'
   - '+.ntes53.com'
   - '+.ntfabu.com'
   - '+.ntflk.com'
@@ -40494,6 +40489,7 @@ payload:
   - '+.ommoo.com'
   - '+.omni-pharma.com'
   - '+.omnibeautylux.com'
+  - '+.omobi.cc'
   - '+.omooo.net'
   - '+.omos88.com'
   - '+.omowork.com'
@@ -41145,7 +41141,6 @@ payload:
   - '+.paopaohd.com'
   - '+.paopaoshipin.com'
   - '+.paopaox.com'
-  - '+.paoshuba.cc'
   - '+.paoxq.com'
   - '+.paoxue.com'
   - '+.papa21.com'
@@ -41250,6 +41245,7 @@ payload:
   - '+.pc51.com'
   - '+.pc521.net'
   - '+.pc5210.com'
+  - '+.pc55.com'
   - '+.pc6.com'
   - '+.pc6a.com'
   - '+.pc811.com'
@@ -41479,7 +41475,6 @@ payload:
   - '+.pglstatp-toutiao-b.com'
   - '+.pglstatp-toutiao.com'
   - '+.pgsql.tech'
-  - '+.pgsqldb.org'
   - '+.pgyer.com'
   - '+.pgyidc.com'
   - '+.pgzs.com'
@@ -43162,6 +43157,7 @@ payload:
   - '+.qishu.cc'
   - '+.qishu.co'
   - '+.qishu.tw'
+  - '+.qishu.vip'
   - '+.qishunbao.com'
   - '+.qishuta.net'
   - '+.qisool.com'
@@ -44848,6 +44844,7 @@ payload:
   - '+.ruijinginfo.com'
   - '+.ruijinintl.com'
   - '+.ruikesearch.com'
+  - '+.ruimao.xyz'
   - '+.ruiqicanyin.com'
   - '+.ruiruigeblog.com'
   - '+.ruiscz.com'
@@ -45753,7 +45750,6 @@ payload:
   - '+.seosiguan.com'
   - '+.seosn.com'
   - '+.seosrx.net'
-  - '+.seosteven.com'
   - '+.seotcs.com'
   - '+.seowhy.com'
   - '+.seoxiaosai.com'
@@ -46293,6 +46289,7 @@ payload:
   - '+.shenshuo.net'
   - '+.shenshuw.com'
   - '+.shensuantang.com'
+  - '+.shensuokeji.com'
   - '+.shentongdata.com'
   - '+.shenweimicro.com'
   - '+.shenweisupport.com'
@@ -46689,6 +46686,7 @@ payload:
   - '+.shqlty.com'
   - '+.shqmxx.com'
   - '+.shqswlgs.com'
+  - '+.shqyg.com'
   - '+.shrail.com'
   - '+.shrca.org'
   - '+.shrcb.com'
@@ -47275,7 +47273,9 @@ payload:
   - '+.sivan.in'
   - '+.sivps.com'
   - '+.siwaman.com'
+  - '+.siwapay.com'
   - '+.siwazywcdn2.com'
+  - '+.siwazywcdn3.com'
   - '+.siwazywimg.com'
   - '+.siwei.me'
   - '+.siweidaotu.com'
@@ -48838,6 +48838,7 @@ payload:
   - '+.swsmu.com'
   - '+.swstsg.com'
   - '+.swt0.com'
+  - '+.swtuchuang4.com'
   - '+.swupdl.adobe.com'
   - '+.swwlotus.com'
   - '+.swwy.com'
@@ -49314,7 +49315,6 @@ payload:
   - '+.szzxks.net'
   - '+.szzyqc.net'
   - '+.szzyqy.com'
-  - '+.t-bb.net'
   - '+.t-cha.com'
   - '+.t-cheshi.com'
   - '+.t-chs.com'
@@ -49323,7 +49323,6 @@ payload:
   - '+.t-gafa.com'
   - '+.t-io.org'
   - '+.t-ji.net'
-  - '+.t-jiaju.com'
   - '+.t-jiu.com'
   - '+.t-nan.com'
   - '+.t-v.com'
@@ -49865,6 +49864,7 @@ payload:
   - '+.techoke.com'
   - '+.techonegame.com'
   - '+.techqianmo.com'
+  - '+.techshidai.com'
   - '+.techsir.com'
   - '+.techtmt.com'
   - '+.techuangyi.com'
@@ -50617,7 +50617,6 @@ payload:
   - '+.tlrcbk.com'
   - '+.tlryjg.com'
   - '+.tlsj-hd.com'
-  - '+.tlstwy.com'
   - '+.tlte.com'
   - '+.tltesoft.com'
   - '+.tltuan.net'
@@ -50637,7 +50636,6 @@ payload:
   - '+.tmeiju.com'
   - '+.tmeissheng.com'
   - '+.tmgwdz.vip'
-  - '+.tmhhost.com'
   - '+.tmhong.com'
   - '+.tmhvps.com'
   - '+.tmiep.org'
@@ -51962,7 +51960,6 @@ payload:
   - '+.uemo.net'
   - '+.uepei.com'
   - '+.ueren.com'
-  - '+.uerlqe.com'
   - '+.uestcedu.com'
   - '+.uestcguoji.com'
   - '+.ueuz.com'
@@ -53368,6 +53365,7 @@ payload:
   - '+.wanfangqikan.com'
   - '+.wanfangs.com'
   - '+.wanfangtech.com'
+  - '+.wanfangtech.net'
   - '+.wanfantian.com'
   - '+.wanfumei.net'
   - '+.wanfuqianqiu.com'
@@ -53772,7 +53770,6 @@ payload:
   - '+.webkdcdn.com'
   - '+.webkf.net'
   - '+.webkv.com'
-  - '+.webmagic.io'
   - '+.webmeng.net'
   - '+.webmulu.com'
   - '+.webok.me'
@@ -53902,7 +53899,6 @@ payload:
   - '+.weifrom.com'
   - '+.weigang.com'
   - '+.weigongju.org'
-  - '+.weigongxue.com'
   - '+.weihai.tv'
   - '+.weihaicollege.com'
   - '+.weihaipoly.com'
@@ -54124,6 +54120,7 @@ payload:
   - '+.wemdsm.com'
   - '+.wemediacn.com'
   - '+.wemomo.com'
+  - '+.wemorefun.com'
   - '+.wemunc.org'
   - '+.wemvp.com'
   - '+.wenancehua.com'
@@ -55007,6 +55004,7 @@ payload:
   - '+.wnbsq.com'
   - '+.wndhw.com'
   - '+.wndlkj.com'
+  - '+.wndroid.com'
   - '+.wnform.com'
   - '+.wnhuifu.com'
   - '+.wniecm.com'
@@ -56562,6 +56560,7 @@ payload:
   - '+.xiaohongchun.com'
   - '+.xiaohongdian.wang'
   - '+.xiaohongshu.com'
+  - '+.xiaohongshu.net'
   - '+.xiaohongshulvyou.com'
   - '+.xiaohuabaichu.com'
   - '+.xiaohuabuluo.com'
@@ -57237,6 +57236,7 @@ payload:
   - '+.xinyisemi.com'
   - '+.xinyitt.com'
   - '+.xinyo100.com'
+  - '+.xinyong.net'
   - '+.xinyongbuy.com'
   - '+.xinyou.com'
   - '+.xinyour.com'
@@ -57702,7 +57702,6 @@ payload:
   - '+.xp868.com'
   - '+.xp933.com'
   - '+.xp9365.com'
-  - '+.xpagn.com'
   - '+.xpaper.com'
   - '+.xpaper.net'
   - '+.xpaper.vip'
@@ -57996,6 +57995,7 @@ payload:
   - '+.xuexiniu.com'
   - '+.xuexitong.com'
   - '+.xuexivip.net'
+  - '+.xuexiwa.com'
   - '+.xueyanshe.com'
   - '+.xueyiyun.com'
   - '+.xueyou.org'
@@ -58150,6 +58150,7 @@ payload:
   - '+.xxdao.com'
   - '+.xxfzl.com'
   - '+.xxgd888.com'
+  - '+.xxggg.net'
   - '+.xxghh.biz'
   - '+.xxgj47.com'
   - '+.xxgzmlt.com'
@@ -58220,6 +58221,7 @@ payload:
   - '+.xy1758.com'
   - '+.xy178.com'
   - '+.xy1989.com'
+  - '+.xy2401.com'
   - '+.xy3000.com'
   - '+.xy58.net'
   - '+.xy599.com'
@@ -59000,7 +59002,6 @@ payload:
   - '+.yhz2000.com'
   - '+.yhz365.com'
   - '+.yhz66.com'
-  - '+.yhzdt.com'
   - '+.yhzky.net'
   - '+.yhzky1.net'
   - '+.yhzm.cc'
@@ -59227,6 +59228,7 @@ payload:
   - '+.yineitong.com'
   - '+.yinfeiy.com'
   - '+.ying-ji.com'
+  - '+.yingbar.com'
   - '+.yingbei365.com'
   - '+.yingbishufa.com'
   - '+.yingcankeji.com'
@@ -59592,7 +59594,6 @@ payload:
   - '+.yjwlo.com'
   - '+.yjwujian.com'
   - '+.yjxsoft.com'
-  - '+.yjyghb.com'
   - '+.yjz9.com'
   - '+.yjzb.app'
   - '+.yjzb.tv'
@@ -59668,6 +59669,7 @@ payload:
   - '+.ym23.com'
   - '+.ym68.cc'
   - '+.ym75168.com'
+  - '+.ymadly.com'
   - '+.ymailcampaign.com'
   - '+.ymall.com'
   - '+.ymanz.com'
@@ -59730,6 +59732,7 @@ payload:
   - '+.yneit.com'
   - '+.ynet.com'
   - '+.ynfabu.com'
+  - '+.ynfxw.com'
   - '+.yngd016.com'
   - '+.ynggzy.com'
   - '+.yngp.com'
@@ -60008,7 +60011,6 @@ payload:
   - '+.youmew.com'
   - '+.youmi.net'
   - '+.youmiad.com'
-  - '+.youmingdot.com'
   - '+.youminonline.com'
   - '+.youmobi.com'
   - '+.youmodou.com'
@@ -61106,7 +61108,6 @@ payload:
   - '+.yygrammar.com'
   - '+.yygzs.com'
   - '+.yyh.la'
-  - '+.yyh2.com'
   - '+.yyhao.com'
   - '+.yyhh.com'
   - '+.yyhhaa.com'
@@ -61122,6 +61123,7 @@ payload:
   - '+.yymedias.com'
   - '+.yyming2.com'
   - '+.yymoban.com'
+  - '+.yynetwk.com'
   - '+.yyouren.com'
   - '+.yypm.com'
   - '+.yypt.com'
@@ -61953,6 +61955,7 @@ payload:
   - '+.zhe800.com'
   - '+.zhebei.com'
   - '+.zhefengle.com'
+  - '+.zhejianglab.com'
   - '+.zhejiangmuseum.com'
   - '+.zhejiangqinghe.com'
   - '+.zhejing.tech'
@@ -62197,6 +62200,7 @@ payload:
   - '+.zhipingke.com'
   - '+.zhiqiang.org'
   - '+.zhiqiapp.com'
+  - '+.zhiqihuo.com'
   - '+.zhiquanxia.com'
   - '+.zhiquapp.com'
   - '+.zhiquyuan.com'
@@ -62512,7 +62516,6 @@ payload:
   - '+.zhuanzhi.net'
   - '+.zhuanzhuan.com'
   - '+.zhuanzhuantui.com'
-  - '+.zhuashouru.com'
   - '+.zhuatang.com'
   - '+.zhuaxia.com'
   - '+.zhuayou.com'
@@ -62787,7 +62790,6 @@ payload:
   - '+.zishuovideo.com'
   - '+.zisia.org'
   - '+.zisuo.com'
-  - '+.ziti.so'
   - '+.ziti163.com'
   - '+.zitiao.org'
   - '+.zitiaonc.com'
@@ -63789,6 +63791,7 @@ payload:
   - '+.zyzaojiao.com'
   - '+.zyzhan.com'
   - '+.zyzhyl.com'
+  - '+.zyzimg.com'
   - '+.zyzj.org'
   - '+.zyzjmz.org'
   - '+.zyzkb.net'
